<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddSchoolActivity">

    <ImageView
        android:id="@+id/iv_set_picture"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:contentDescription="@string/desc_iv_set_picture"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/haus" />

    <ImageView
        android:id="@+id/iv_set_picture2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/desc_iv_set_picture2"
        app:layout_constraintBottom_toBottomOf="@+id/iv_set_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <TextView
        android:id="@+id/tv_new_school_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/new_school_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_set_picture" />

    <TextView
        android:id="@+id/tv_new_school_place"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:layout_marginTop="8dp"
        android:text="@string/place_label"
        android:textAlignment="viewEnd"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/et_new_school_place"
        app:layout_constraintEnd_toEndOf="@+id/tv_new_school_canton"
        app:layout_constraintTop_toTopOf="@+id/et_new_school_place" />

    <TextView
        android:id="@+id/tv_new_school_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/name_label"
        android:textAlignment="viewEnd"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/et_new_school_name"
        app:layout_constraintEnd_toEndOf="@+id/tv_new_school_place"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_new_school_name" />

    <EditText
        android:id="@+id/et_new_school_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_school_name"
        android:inputType="textCapWords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_new_school_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_new_school_title" />

    <EditText
        android:id="@+id/et_new_school_place"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_place"
        android:inputType="textCapWords"
        app:layout_constraintEnd_toEndOf="@+id/et_new_school_name"
        app:layout_constraintStart_toStartOf="@+id/et_new_school_name"
        app:layout_constraintTop_toBottomOf="@+id/et_new_school_name" />

    <Button
        android:id="@+id/btn_save_new_school"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_bg_gradient"
        android:elevation="5dp"
        android:text="@string/btn_save"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_new_school_canton" />

    <TextView
        android:id="@+id/tv_new_school_canton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/canton_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/et_new_school_canton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_new_school_canton"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/et_new_school_canton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_canton"
        android:inputType="textCapWords"
        app:layout_constraintEnd_toEndOf="@+id/et_new_school_place"
        app:layout_constraintStart_toStartOf="@+id/et_new_school_place"
        app:layout_constraintTop_toBottomOf="@+id/et_new_school_place" />

</android.support.constraint.ConstraintLayout>