<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/img_icon_google"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            android:contentDescription="@string/desc_img_icon_google"
            android:elevation="5dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/img_icon_facebook"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_google" />

        <ImageView
            android:id="@+id/img_icon_instagram"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:clickable="true"
            android:contentDescription="@string/desc_img_icon_instagram"
            android:elevation="5dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:layout_constraintEnd_toStartOf="@+id/img_icon_facebook"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/img_icon_twitter"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_instagram" />

        <ImageView
            android:id="@+id/img_icon_twitter"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:clickable="true"
            android:contentDescription="@string/desc_img_icon_twitter"
            android:elevation="5dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:layout_constraintEnd_toStartOf="@+id/img_icon_instagram"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_twitter" />

        <ImageView
            android:id="@+id/img_icon_facebook"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:clickable="true"
            android:contentDescription="@string/desc_img_icon_facebook"
            android:elevation="5dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:layout_constraintEnd_toStartOf="@+id/img_icon_google"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/img_icon_instagram"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_facebook" />
    </android.support.constraint.ConstraintLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="29dp"
            tools:layout_editor_absoluteY="384dp">

            <TextView
                android:id="@+id/textView36"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/info_questions"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView41" />

            <TextView
                android:id="@+id/textView30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/developed_by"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/tv_version_nr"
                app:layout_constraintTop_toBottomOf="@+id/tv_version_nr" />

            <TextView
                android:id="@+id/textView40"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/developer"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/textView30"
                app:layout_constraintTop_toTopOf="@+id/textView30" />

            <TextView
                android:id="@+id/tv_version_nr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView41"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/supportemail"
                android:textColor="@color/defaultColor"
                android:textSize="14sp"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="@+id/textView30"
                app:layout_constraintTop_toBottomOf="@+id/textView30"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"/>

            <TextView
                android:id="@+id/textView42"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/problems"
                app:layout_constraintEnd_toEndOf="@+id/textView36"
                app:layout_constraintStart_toStartOf="@+id/textView36"
                app:layout_constraintTop_toBottomOf="@+id/textView36" />

            <Button
                android:id="@+id/btn_info_to_bug_report"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_bg_gradient"
                android:clickable="true"
                android:elevation="5dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/to_contact_activity"
                android:textColor="@android:color/background_light"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textView42"
                app:layout_constraintStart_toStartOf="@+id/textView42"
                app:layout_constraintTop_toBottomOf="@+id/textView42" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/control_panel_gradient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.v7.widget.CardView
            android:id="@+id/cv_info_to_website"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView39">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView37"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/tadel"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    app:layout_constraintBottom_toTopOf="@+id/textView38"
                    app:layout_constraintStart_toEndOf="@+id/imageView12"
                    app:layout_constraintTop_toTopOf="@+id/imageView12" />

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="64dp"
                    android:layout_height="0dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/desc_image_tadel"
                    android:elevation="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/tadel_logo" />

                <TextView
                    android:id="@+id/textView38"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/tadel_website"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView12"
                    app:layout_constraintStart_toEndOf="@+id/imageView12"
                    app:layout_constraintTop_toBottomOf="@+id/textView37" />
            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/textView39"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:elevation="5dp"
            android:text="@string/tadel_website_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>